--- a/write-up/00_abstract.tex
+++ b/write-up/00_abstract.tex
@@ -1,1 +1,2 @@
-Not that often. Probably decreased over recent years.
+We propose \xin---the proportion of papers' citations coming from outside their research field---and use this metric to analyze citations of CHI, UIST, and CSCW papers between 2010 and 2022.
+We found an overall decreasing \xin by several measures, indicating that HCI papers have been more and more likely to be cited by HCI papers rather than by non-HCI papers.
