--- a/write-up/01_introduction.tex
+++ b/write-up/01_introduction.tex
@@ -22,13 +22,27 @@ Unfortunately, conventional citation metrics, such as h-index or i-10-index, can
 % use an example (and refer to figure 1) to walkthrough your research in more details
 % As shown in \fgref{fig1}, \xxx
 To address this, we propose \xin---a simple metric that measures how often a paper's citations cross the disciplinary boundaries.
-Given a set of venues representing a specific research field, X-index is defined as the proportion of citations {\it not} coming these venues.
+Given a set of venues representing a research field, the \xin of the papers in this field is defined as the proportion of citations of these papers {\it not} coming from these venues.
 
-\xac{todo: briefly describe dataset}
+We compiled a list of core HCI venues and analyzed \xin of papers from CHI, UIST, and CSCW (hereafter referred to as {\bf HCI papers}) published between 2010 and 2020\footnote{Our dataset and source code can be found at \url{https://github.com/hotnAny/x-index}.}.
+We found that 
+\begin{itemize} [leftmargin=0.25in]
+    \item \xin of more recently published HCI papers have a lower \xin than earlier papers';
+    \item If only considering HCI papers that have existed for at least five years, the more recently-published papers' \xin is still lower;
+    \item Amongst all the HCI papers cited in a given year, the earlier papers tend to have a higher \xin than the later ones;
+    \item In the more recent years, HCI papers seem less likely to be cited by papers outside of our core HCI venue list.
+\end{itemize}
 
-\xac{todo: summarize findings}
 
-\xac{todo: show github link}
+
+
+% \xac{todo: briefly describe dataset}
+
+% \xac{todo: summarize findings}
+
+% \xac{todo: show github link}
+
+% \xac{cite the stanford paper}
 
 % PROOF
 % what experiments/evaluations/studies have you run to prove that your idea works?
