--- a/write-up/main.tex
+++ b/write-up/main.tex
@@ -3,7 +3,7 @@
 % begin ACM TAPS stuff
 \documentclass[sigconf]{acmart}
 \usepackage{xspace}
-
+\usepackage{hyperref}
 
 %%
 %% \BibTeX command to typeset BibTeX logo in the docs
@@ -17,16 +17,16 @@
 %% the commands and values with those provided to you when you
 %% complete the rights form.
 \setcopyright{acmcopyright}
-\copyrightyear{2018}
-\acmYear{2018}
+\copyrightyear{2023}
+\acmYear{2023}
 \acmDOI{XXXXXXX.XXXXXXX}
 
 %% These commands are for a PROCEEDINGS abstract or paper.
-\acmConference[Conference acronym 'XX]{Make sure to enter the correct
-  conference title from your rights confirmation emai}{June 03--05,
-  2018}{Woodstock, NY}
-\acmPrice{15.00}
-\acmISBN{978-1-4503-XXXX-X/18/06}
+% \acmConference[Conference acronym 'XX]{Make sure to enter the correct
+%   conference title from your rights confirmation emai}{June 03--05,
+%   2018}{Woodstock, NY}
+% \acmPrice{15.00}
+% \acmISBN{978-1-4503-XXXX-X/18/06}
 
 % end ACM TAPS stuff
 
@@ -38,7 +38,7 @@
 \begin{document}
 
 % \title{HCI Papers Are Increasingly Cited More Often by HCI Papers}
-\title{How Often Are HCI Papers Cited by Non-HCI Papers?}
+\title{HCI Papers Cite HCI Papers, Increasingly So}
 
 \author{Xiang `Anthony' Chen}
 \affiliation{%
@@ -70,7 +70,7 @@
 %%
 %% Keywords. The author(s) should pick words that accurately describe
 %% the work being presented. Separate the keywords with commas.
-\keywords{HCI, citation metrics, discipline, impact}
+\keywords{HCI, Citation Metrics, Discipline, Impact}
 
 %% A "teaser" image appears between the author and affiliation
 %% information and the body of the document, and typically spans the
@@ -97,7 +97,7 @@
 % \input{07_discussions}
 % \input{08_conclusion}
 
-Remove this citation later: \cite{bush1945we}.
+% Remove this citation later: \cite{bush1945we}.
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ref_main}
