--- a/write-up/ref_main.bib
+++ b/write-up/ref_main.bib
@@ -37,3 +37,20 @@ howpublished = {\url{https://www.lens.org/}},
 year = {2023},
 note = {(Accessed on 02/24/2023)}
 }
+
+
+@misc{cao_breaking_2023,
+	title = {Breaking {Out} of the {Ivory} {Tower}: {A} {Large}-scale {Analysis} of {Patent} {Citations} to {HCI} {Research}},
+	shorttitle = {Breaking {Out} of the {Ivory} {Tower}},
+	url = {http://arxiv.org/abs/2301.13431},
+	doi = {10.1145/3544548.3581108},
+	abstract = {What is the impact of human-computer interaction research on industry? While it is impossible to track all research impact pathways, the growing literature on translational research impact measurement offers patent citations as one measure of how industry recognizes and draws on research in its inventions. In this paper, we perform a large-scale measurement study primarily of 70,000 patent citations to premier HCI research venues, tracing how HCI research are cited in United States patents over the last 30 years. We observe that 20.1\% of papers from these venues, including 60--80\% of papers at UIST and 13\% of papers in a broader dataset of SIGCHI-sponsored venues overall, are cited by patents -- far greater than premier venues in science overall (9.7\%) and NLP (11\%). However, the time lag between a patent and its paper citations is long (10.5 years) and getting longer, suggesting that HCI research and practice may not be efficiently connected.},
+	urldate = {2023-03-04},
+	author = {Cao, Hancheng and Lu, Yujie and Deng, Yuting and McFarland, Daniel A. and Bernstein, Michael S.},
+	year = {2023},
+	note = {arXiv:2301.13431 [cs]},
+	keywords = {Computer Science - Computers and Society, Computer Science - Digital Libraries, Computer Science - Human-Computer Interaction},
+	annote = {Comment: accepted to CHI 2023},
+	file = {arXiv Fulltext PDF:/Users/hotnany/Zotero/storage/RHENUZX5/Cao et al. - 2023 - Breaking Out of the Ivory Tower A Large-scale Ana.pdf:application/pdf;arXiv.org Snapshot:/Users/hotnany/Zotero/storage/QSKNVV6A/2301.html:text/html},
+}
+
